@startuml

title __VUE's Class Diagram__\n

  package vue {
    class CadreAccueil {
        + debutPartie : JButton
        + records : JButton
        + quitter : JButton
        ~ panelBas : JPanel
        ~ fichierRecord : File
        + CadreAccueil()
    }
  }
  

  package vue {
    class CadreJeu {
        + continuerJeu : JButton
        + abandonner : JButton
        ~ panelBas : JPanel
        ~ panelC1 : JPanel
        ~ panelC2 : JPanel
        ~ panelTour : JPanel
        ~ panelScore : JPanel
        ~ labelC1 : JLabel
        ~ labelC2 : JLabel
        ~ labelTour : JLabel
        ~ labelScore : JLabel
        + CadreJeu()
        + miseAJour()
    }
  }
  

  package vue {
    class CadrePseudo {
        + continuer : JButton
        + abandonner : JButton
        ~ panelBas : JPanel
        ~ panelHaut : JPanel
        ~ label : JLabel
        + textField : JTextField
        + CadrePseudo()
    }
  }
  

  package vue {
    class CadreRecords {
        + retourMenu : JButton
        + quitter : JButton
        ~ panelBas : JPanel
        ~ panelHaut : JPanel
        ~ fichierRecord : File
        ~ classement : JLabel
        + CadreRecords()
    }
  }
  

  CadreAccueil -up-|> JFrame
  CadreAccueil o-- Ecouteur : ebcp
  CadreAccueil o-- Ecouteur : ebq
  CadreAccueil o-- Ecouteur : ebr
  AccessibleJFrame -up-|> AccessibleAWTFrame
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFrame -up-|> AccessibleAWTWindow
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTWindow -up-|> AccessibleAWTContainer
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  WindowDisposerRecord -up-|> DisposerRecord
  AccessibleAWTContainer -up-|> AccessibleAWTComponent
  AccessibleAWTContainer +-down- AccessibleContainerHandler
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  DropTargetEventTargetFilter -up-|> EventTargetFilter
  MouseEventTargetFilter -up-|> EventTargetFilter
  WakingRunnable -up-|> Runnable
  AccessibleAWTComponent -up-|> Serializable
  AccessibleAWTComponent -up-|> AccessibleComponent
  AccessibleAWTComponent -up-|> AccessibleContext
  AccessibleAWTComponent +-down- AccessibleAWTComponentHandler
  AccessibleAWTComponent +-down- AccessibleAWTFocusHandler
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  BltBufferStrategy -up-|> BufferStrategy
  BltSubRegionBufferStrategy -up-|> SubRegionShowable
  BltSubRegionBufferStrategy -up-|> BltBufferStrategy
  DummyRequestFocusController -up-|> RequestFocusController
  FlipBufferStrategy -up-|> BufferStrategy
  FlipSubRegionBufferStrategy -up-|> SubRegionShowable
  FlipSubRegionBufferStrategy -up-|> FlipBufferStrategy
  ProxyCapabilities -up-|> ExtendedBufferCapabilities
  FlipContents -up-|> AttributeValue
  SingleBufferStrategy -up-|> BufferStrategy
  CadreJeu -up-|> JFrame
  CadreJeu o-- Joueur : j
  CadreJeu o-- Ecouteur : ecj
  CadreJeu o-- Ecouteur : ea
  CadreJeu o-- Jeu : jeu
  AccessibleJFrame -up-|> AccessibleAWTFrame
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFrame -up-|> AccessibleAWTWindow
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTWindow -up-|> AccessibleAWTContainer
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  WindowDisposerRecord -up-|> DisposerRecord
  AccessibleAWTContainer -up-|> AccessibleAWTComponent
  AccessibleAWTContainer +-down- AccessibleContainerHandler
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  DropTargetEventTargetFilter -up-|> EventTargetFilter
  MouseEventTargetFilter -up-|> EventTargetFilter
  WakingRunnable -up-|> Runnable
  AccessibleAWTComponent -up-|> Serializable
  AccessibleAWTComponent -up-|> AccessibleComponent
  AccessibleAWTComponent -up-|> AccessibleContext
  AccessibleAWTComponent +-down- AccessibleAWTComponentHandler
  AccessibleAWTComponent +-down- AccessibleAWTFocusHandler
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  BltBufferStrategy -up-|> BufferStrategy
  BltSubRegionBufferStrategy -up-|> SubRegionShowable
  BltSubRegionBufferStrategy -up-|> BltBufferStrategy
  DummyRequestFocusController -up-|> RequestFocusController
  FlipBufferStrategy -up-|> BufferStrategy
  FlipSubRegionBufferStrategy -up-|> SubRegionShowable
  FlipSubRegionBufferStrategy -up-|> FlipBufferStrategy
  ProxyCapabilities -up-|> ExtendedBufferCapabilities
  FlipContents -up-|> AttributeValue
  SingleBufferStrategy -up-|> BufferStrategy
  CadrePseudo -up-|> JFrame
  CadrePseudo o-- Ecouteur : ec
  CadrePseudo o-- Ecouteur : ea
  AccessibleJFrame -up-|> AccessibleAWTFrame
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFrame -up-|> AccessibleAWTWindow
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTWindow -up-|> AccessibleAWTContainer
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  WindowDisposerRecord -up-|> DisposerRecord
  AccessibleAWTContainer -up-|> AccessibleAWTComponent
  AccessibleAWTContainer +-down- AccessibleContainerHandler
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  DropTargetEventTargetFilter -up-|> EventTargetFilter
  MouseEventTargetFilter -up-|> EventTargetFilter
  WakingRunnable -up-|> Runnable
  AccessibleAWTComponent -up-|> Serializable
  AccessibleAWTComponent -up-|> AccessibleComponent
  AccessibleAWTComponent -up-|> AccessibleContext
  AccessibleAWTComponent +-down- AccessibleAWTComponentHandler
  AccessibleAWTComponent +-down- AccessibleAWTFocusHandler
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  BltBufferStrategy -up-|> BufferStrategy
  BltSubRegionBufferStrategy -up-|> SubRegionShowable
  BltSubRegionBufferStrategy -up-|> BltBufferStrategy
  DummyRequestFocusController -up-|> RequestFocusController
  FlipBufferStrategy -up-|> BufferStrategy
  FlipSubRegionBufferStrategy -up-|> SubRegionShowable
  FlipSubRegionBufferStrategy -up-|> FlipBufferStrategy
  ProxyCapabilities -up-|> ExtendedBufferCapabilities
  FlipContents -up-|> AttributeValue
  SingleBufferStrategy -up-|> BufferStrategy
  CadreRecords -up-|> JFrame
  CadreRecords o-- Ecouteur : ecouteurQuitter
  CadreRecords o-- Ecouteur : ecouteurAbandonner
  CadreRecords o-- GererFichier : lf
  AccessibleJFrame -up-|> AccessibleAWTFrame
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFrame -up-|> AccessibleAWTWindow
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTWindow -up-|> AccessibleAWTContainer
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  WindowDisposerRecord -up-|> DisposerRecord
  AccessibleAWTContainer -up-|> AccessibleAWTComponent
  AccessibleAWTContainer +-down- AccessibleContainerHandler
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  DropTargetEventTargetFilter -up-|> EventTargetFilter
  MouseEventTargetFilter -up-|> EventTargetFilter
  WakingRunnable -up-|> Runnable
  AccessibleAWTComponent -up-|> Serializable
  AccessibleAWTComponent -up-|> AccessibleComponent
  AccessibleAWTComponent -up-|> AccessibleContext
  AccessibleAWTComponent +-down- AccessibleAWTComponentHandler
  AccessibleAWTComponent +-down- AccessibleAWTFocusHandler
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  BltBufferStrategy -up-|> BufferStrategy
  BltSubRegionBufferStrategy -up-|> SubRegionShowable
  BltSubRegionBufferStrategy -up-|> BltBufferStrategy
  DummyRequestFocusController -up-|> RequestFocusController
  FlipBufferStrategy -up-|> BufferStrategy
  FlipSubRegionBufferStrategy -up-|> SubRegionShowable
  FlipSubRegionBufferStrategy -up-|> FlipBufferStrategy
  ProxyCapabilities -up-|> ExtendedBufferCapabilities
  FlipContents -up-|> AttributeValue
  SingleBufferStrategy -up-|> BufferStrategy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
